--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         <div class="button">
-            <button class="back-button" onclick="window.location.href='dashboard.html'">Go Back to Dashboard</button>
+            <button class="back-button" onclick="window.location.href='index.html'">Go Back to Dashboard</button>
         </div>
         <div class="nav">
             <button id="logout-button">Logout</button>
